1.新增 696. 计数二进制子串，自己的笨方法做了出来；老师的方法还没看

--- a/慕课-数据结构与算法/code/001 螺旋矩阵.html
+++ b/慕课-数据结构与算法/code/001 螺旋矩阵.html
@@ -9,12 +9,19 @@
 </head>
 
 <body>
-  <script type="module">
+  <!-- <script type="module">
     import matrix from './螺旋矩阵.js'
     let input = [[1,11],[2,12],[3,13],[4,14],[5,15],[6,16],[7,17],[8,18],[9,19],[10,20]]
     let output = matrix(input)
     console.log('output',output)
-  </script>
+  </script> -->
+
+  <script type="module">
+    import matrix from './string/lesson2.js'
+  let input = "00110"
+  let output = matrix(input)
+  console.log('output',output)
+</script>
 
 </body>
 
