--- a/慕课-数据结构与算法/code/001 螺旋矩阵.html
+++ b/慕课-数据结构与算法/code/001 螺旋矩阵.html
@@ -24,13 +24,19 @@
 </script> -->
 
 
-  <script type="module">
+  <!-- <script type="module">
     import method from './array/lesson1.js'
     let input = "234"
     let output = method(input)
     console.log('output', output)
-  </script>
+  </script> -->
 
+  <script type="module">
+      import method from './array/lesson2.js'
+      let input = [1,1,1,1,2,2,2,2,2,2]
+      let output = method(input)
+      console.log('output', output)
+    </script>
 </body>
 
 </html>
