1。新增 605. 种花问题

--- a/慕课-数据结构与算法/code/001 螺旋矩阵.html
+++ b/慕课-数据结构与算法/code/001 螺旋矩阵.html
@@ -31,12 +31,19 @@
     console.log('output', output)
   </script> -->
 
-  <script type="module">
-      import method from './array/lesson2.js'
+  <!-- <script type="module">
+    import method from './array/lesson2.js'
       let input = [1,1,1,1,2,2,2,2,2,2]
       let output = method(input)
       console.log('output', output)
-    </script>
+    </script> -->
+
+  <script type="module">
+    import method from './array/lesson3_2.js'
+        let input = ([1,0,0,0,1],1)
+        let output = method([1,0,0,0,0,0,1],2)
+        console.log('output', output)
+      </script>
 </body>
 
 </html>
