--- a/慕课-数据结构与算法/code/001 螺旋矩阵.html
+++ b/慕课-数据结构与算法/code/001 螺旋矩阵.html
@@ -39,7 +39,7 @@
     </script> -->
 
   <script type="module">
-    import method from './array/lesson3_2.js'
+    import method from './array/lesson3.js'
         let input = ([1,0,0,0,1],1)
         let output = method([1,0,0,0,0,0,1],2)
         console.log('output', output)
