1.优化 整理目录

--- a/慕课-数据结构与算法/code/001 螺旋矩阵.html
+++ b/慕课-数据结构与算法/code/001 螺旋矩阵.html
@@ -38,7 +38,7 @@
       console.log('output', output)
     </script> -->
 
-  <script src="./array/lesson4.js">
+  <script src="./stack/lesson1.js">
     // import method from './array/lesson4.js'
         // let input = ([1,0,0,0,1],1)
         // let output = method([1,0,0,0,0,0,1],2)
