--- a/js/手写promise/promise.html
+++ b/js/手写promise/promise.html
@@ -43,40 +43,68 @@
         }
         // 立即执行
         try {
-          executor(resolve, rejrct)
+          executor(resolve, reject)
         } catch (err) {
           reject(err)
         }
 
       }
       then(onFulfilled, onRejected) {
+        onFulfilled = typeof onFulfilled === 'function' ? onFulfilled : value => value
+        onRejected = typeof onRejected === 'function' ? onRejected : err => {
+          throw err
+        }
         // 声明返回的promise2
         let promise2 = new Promise((resolve, reject) => {
           if (this.state === 'fulfilled') {
-            let x = onFulfilled(this.value)
-            resolvePromise(promise2, x, resolve, reject)
+            setTimeout(() => {
+              try {
+                let x = onFulfilled(this.value)
+                resolvePromise(promise2, x, resolve, reject)
+              } catch (e) {
+                reject(e)
+              }
+            }, 0)
+
           }
           if (this.state === 'rejected') {
+            setTimeout(() => {
+              try {
+                let x = onRejected(this.reason)
+                resolvePromise(promise2, x, resolve, reject)
+              } catch (e) {
+                reject(e)
+              }
+            }, 0)
 
-            let x = onRejected(this.reason)
-            resolvePromise(promise2, x, resolve, reject)
           }
           // 当状态state为pending时存起来，解决异步问题
           if (this.state === 'pending') {
             this.onResolvedCallbacks.push(() => {
-              onFulfilled(this.value)
+              setTimeout(() => {
+                try {
+                  let x = onFulfilled(this.value)
+                  resolvePromise(promise2, x, resolve, reject)
+                } catch (e) {
+                  reject(e)
+                }
+              }, 0)
             })
             this.onRejectedCallbacks.push(() => {
-              onRejected(this.reason)
+              setTimeout(() => {
+                try {
+                  let x = onRejected(this.reason)
+                  resolvePromise(promise2, x, resolve, reject)
+                } catch (e) {
+                  reject(e)
+                }
+              }, 0)
             })
           }
         })
         // 返回promise，完成链式
         return promise2;
-
       }
-
-
     }
 
     function resolvePromise(promise2, x, resolve, reject) {
@@ -124,16 +152,20 @@
 
     let p = () => {
       return new Promise((resolve, reject) => {
+        console.log('ppp')
         resolve()
       });
     }
+    // p().then(res => {
+    //   console.log(1111)
+    //   throw new Error('出错了');
+    // }).then(res => {
+    //   console.log(3333)
+    // }).catch(err => {
+    //   console.log(2222)
+    // })
     p().then(res => {
       console.log(1111)
-      throw new Error('出错了');
-    }).then(res => {
-      console.log(3333)
-    }).catch(err => {
-      console.log(2222)
     })
   </script>
 </body>
