1.新增 提取括号 str.match(reg)

--- a/算法/判断(){}完整.html
+++ b/算法/判断(){}完整.html
@@ -28,6 +28,15 @@
     }  
     let test = '()()(()){{{{{}}}}}'
     console.log(isVaild(test))
+
+    function getKH(str){
+      let arr = []
+      let reg = /\(|\)|\[|\]|\{|\}/g
+      console.log(reg.exec(str))
+      return str.match(reg)
+    }
+    let str = '(asda{dsadas}s)'
+    console.log(getKH(str).join(''))
   </script>
 </body>
 </html>
