1.新增 掘金小册上的面试版.html

--- a/js/手写promise/面试够用版.html
+++ b/js/手写promise/面试够用版.html
@@ -51,13 +51,14 @@
       }
     }
 
+    // 这个写法延时就不行了，还是得用掘金小册的面试版，用数组存，pending时push进去
     let p = new myPromise((resolve, reject) => {
-      resolve(1)
+      setTimeout(() => {
+        resolve(1)
+      }, 0);
     })
     p.then(x => {
       console.log(x)
-    }).then(x=>{
-      console.log('x',x)
     })
   </script>
 
