--- a/有意思的/拉取抖音视频/node/video/public/index.html
+++ b/有意思的/拉取抖音视频/node/video/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  视频地址：<input id="inputUrl" type="text">
+  视频地址：<input id="inputUrl" type="text" value="https://v.douyin.com/qKDN9n/">
   <button class="start">开始下载</button>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
   <script>
