1.自己写一遍深拷贝

--- a/js/深拷贝2.html
+++ b/js/深拷贝2.html
@@ -10,24 +10,63 @@
 <body>
   <!-- 2020年7月10日11:50:28 -->
   <script>
+    // function deepClone(obj) {
+    //   function isObject(o) {
+    //     return (typeof o === 'object' || typeof 0 === 'function') && o !== null
+    //   }
+    //   if (!isObject(obj)) {
+    //     throw new Error('传入参数不是对象')
+    //   }
+    //   let isArray = Array.isArray(obj)
+    //   let newObj = isArray ? [...obj] : {
+    //     ...obj
+    //   }
+    //   // Reflect.ownKeys
+    //   Object.keys(newObj).forEach(key => {
+    //     newObj[key] = isObject(obj[key]) ? deepClone(obj[key]) : obj[key]
+    //   })
+    //   return newObj
+    // }
+
+    // let obj = {
+    //   a: [1, 2, 3],
+    //   b: {
+    //     c: 2,
+    //     d: 3
+    //   },
+    //   c: function () {
+    //     console.log(this.b.c)
+    //   },
+    //   d: null,
+    //   e: undefined,
+    //   f: Symbol('f'),
+    // }
+    // let newObj = deepClone(obj)
+    // newObj.b.c = 1
+    // newObj.c = 1
+    // console.log('obj', obj)
+    // console.log('newObj', newObj)
+  </script>
+
+  <script>
+    function isObj(o) {
+      return (typeof o === 'object' || typeof o === 'function') && o !== null
+    }
+
     function deepClone(obj) {
-      function isObject(o) {
-        return (typeof o === 'object' || typeof 0 === 'function') && o !== null
-      }
-      if (!isObject(obj)) {
-        throw new Error('传入参数不是对象')
-      }
+      let newObj;
       let isArray = Array.isArray(obj)
-      let newObj = isArray ? [...obj] : {
+
+      newObj = isArray ? [...obj] : {
         ...obj
       }
-      // Reflect.ownKeys
-      Object.keys(newObj).forEach(key => {
-        newObj[key] = isObject(obj[key]) ? deepClone(obj[key]) : obj[key]
+
+      Object.keys(obj).forEach(key => {
+        newObj[key] = isObj(obj[key]) ? deepClone(obj[key]) : obj[key]
+
       })
       return newObj
     }
-
     let obj = {
       a: [1, 2, 3],
       b: {
