--- a/js/手写promise/new/instanceof.html
+++ b/js/手写promise/new/instanceof.html
@@ -87,6 +87,68 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <script>
+    function mnew() {
+      let obj = {}
+      let c = [].shift.call(arguments)
+      obj.__proto__ = c.prototype
+      let res = c.call(obj, ...arguments)
+      return typeof res === 'object' ? res : obj
+    }
+
+    function mInstanceof(left, right) {
+      let prototype = right.prototype
+      left = left.__proto__
+      while (1) {
+        if (left == null) {
+          return false
+        }
+        if (left === prototype) {
+          return true
+        }
+        left = left.__proto__
+      }
+
+    }
+    console.log(mInstanceof([], Object))
+  </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
